<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLabelName"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20sp"
            android:text="@string/name_Label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="146dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLabelPayment"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20sp"
            android:text="@string/payment_Label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPayment"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLabelStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20sp"
            android:text="@string/status_Label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="259dp"
            android:layout_height="match_parent"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLabelCreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20sp"
            android:text="@string/created_date_Label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCreatedDate"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
</LinearLayout>
